--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | workshop: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
-    <meta name="description" content="{{ page.description | default: site.description | default: site.github.project_tagline }}"/>
+    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title | workshop: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    <meta name="description" content="{{ page.description | workshop: site.description | workshop: site.github.project_tagline }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
