--- a/_layouts/default_workshop.html
+++ b/_layouts/default_workshop.html
@@ -18,7 +18,7 @@
     <section class="main-content">
       <a id="mycontent"></a>
       {{ content }}
-      {% include footer.html %}
+      {% include workshop_footer.html %}
     </section>
   </body>
 </html>
