--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -1,17 +1,14 @@
 <footer class="site-footer">
-<div>
-<div class="footerLeftCol">
-<img src="images/onr-logo.jpeg"/>
-</div>
-<div class="footerRightCol">
-  <span class="site-footer-credits">
+<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+<img src="images/WorkshopFooterLogo.png"/>
+  
     <p> </p>
-    <p> Sponsored by the <a href="https://www.onr.navy.mil/"> Office
+    <p align="center">
+      Sponsored by the <a href="https://www.onr.navy.mil/"> Office
     of Naval Research.</a>
     </p>
-     <p> Hosted by the <a href="https://seaicemuri.org/"> Sea Ice Muri.</a>
+  <p align="center">
+    Hosted by the <a href="https://seaicemuri.org/"> Sea Ice Muri.</a>
     </p>
-  </span>
-</div>
-</div>
+
 </footer>
