--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -1,6 +1,7 @@
 <footer class="site-footer">
-<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-<img src="images/WorkshopFooterLogo.png"/>
+<p align="center">
+<img src="files/FooterCentered.png"/>
+  </p>
   
     <p> </p>
     <p align="center">
