--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -6,10 +6,10 @@
     <p> </p>
     <p align="center">
       Sponsored by the <a href="https://www.onr.navy.mil/"> Office
-    of Naval Research.</a>
+    of Naval Research</a>
     </p>
   <p align="center">
-    Hosted by the <a href="https://seaicemuri.org/"> Sea Ice Muri.</a>
+    Hosted by the <a href="https://seaicemuri.org/"> ONR MURI: Mathematics and Data Science for Physical Modeling and Prediction of Sea Ice</a>
     </p>
 
 </footer>
