--- a/assets/css/workshopstyle.scss
+++ b/assets/css/workshopstyle.scss
@@ -89,7 +89,7 @@ $header-heading-color: 	#51422c;
 
 $base-line-height: 1.5 !default;
 $base-font-size: 16px !default;
-$background-color: #fdfdfd !default;
+$background-color: #d3d3d3 !default;
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $spacing-unit: 30px !default;
