--- a/assets/css/workshopstyle.scss
+++ b/assets/css/workshopstyle.scss
@@ -13,7 +13,7 @@ $header-heading-color: 	#51422c;
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
-  background-image: url("/images/mackenzie_whitish.jpg");
+  background-image: url("/images/SeaIceWatermark.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center; 
