--- a/assets/css/workshopstyle.scss
+++ b/assets/css/workshopstyle.scss
@@ -5,7 +5,7 @@ $header-bg-color: #cccccc;
 $section-headings-color: #422C51;
 $large-breakpoint: 64em;
 $medium-breakpoint: 48em;
-$header-heading-color: 	#422C51;
+$header-heading-color: 	#7a49a5;
 
 @import "{{ site.theme }}";
 
