--- a/assets/css/workshopstyle.scss
+++ b/assets/css/workshopstyle.scss
@@ -2,10 +2,10 @@
 ---
 
 $header-bg-color: #cccccc;
-$section-headings-color: #422C51;
+$section-headings-color: #7a49a5;
 $large-breakpoint: 64em;
 $medium-breakpoint: 48em;
-$header-heading-color: 	#7a49a5;
+$header-heading-color: 	#422C51;
 
 @import "{{ site.theme }}";
 
